--- a/기초/변수와상수.md
+++ b/기초/변수와상수.md
@@ -62,7 +62,7 @@ const myName = "HongYeseul";
 myName = "Yeseul" // ERROR!
 ```
 
-상수를 정의할 때는 명시적으로 대문자로 별칭을 정합니다.
+상수를 정의할 때는 암묵적으로 대문자로 별칭을 정합니다.
 ``` javascript
 const BIRTH_DAY = "0930";
 ```
