--- a/기초/변수와상수.md
+++ b/기초/변수와상수.md
@@ -111,13 +111,13 @@ let num = 123;
 ```
 일반적인 숫자와 ```Infinity```, ```-Infinity```, ```NaN```과 같이 '특수 숫자 값'이 들어갈 수도 있습니다.
 
-### - ```Infinity```
+#### - ```Infinity```
 Infinity는 단어에서 알 수 있듯이 무한대의 숫자를 의미합니다.   
 예를들면, 어떤 숫자든 숫자 0으로 나누면 무한대를 얻을 수 있습니다.
 ``` javascript
 1 / 0
 ```
-### - ```NaN```
+#### - ```NaN```
 NaN은 계산 중에 에러가 발생 했다는 것을 알려주는 값입니다.
 ``` javascript
 "문자열" / 5
@@ -131,9 +131,10 @@ NaN은 계산 중에 에러가 발생 했다는 것을 알려주는 값입니다
 
 자바스크립트에서는 큰 따옴표와 작은 따옴표를 구분하지 않습니다.
 
-하지만 다른 프로그래밍 언어에서는 보통 큰 따옴표는 문자열을, 작은 따옴표로는 문자를 의미하므로 헷갈리지 않게하기 위하여 큰 따옴표를 사용하는 것을 추천합니다.
+하지만 다른 프로그래밍 언어에서는 보통 큰 따옴표는 문자열을, 작은 따옴표로는 문자를 의미하므로    
+헷갈리지 않게하기 위하여 큰 따옴표를 사용하는 것을 추천합니다.
 
-역 따옴표(백틱)는 문장 내 변수나 표현식을 사용하고 싶을 때 편하게 쓰기 위하여 사용하는 따옴표 입니다.
+역 따옴표(백틱)는 문장 내 변수나 표현식을 사용하고 싶을 때 편하게 쓰기 위하여 사용하는 따옴표 입니다.
 ``` javascript
 let name = "Yeseul";
 alert(`My name is ${Yeseul}`);
@@ -154,7 +155,7 @@ trueOrFalse;
 이는 자바스크립트의 null과 다른 언어의 null의 특성은 조금 다른 것을 볼 수 있습니다.
 ###### 다른 언어에선 null을 '존재하지 않는 객체에 대한 참조’나 '널 포인터(null pointer)'를 나타낼 때 사용합니다.
 
-```let age = null;```은 나이(age)를 알 수 없거나 그 값이 비어있음을 보여줍니다.
+```let age = null;```은 나이(age)를 알 수 없거나 그 값이 비어있음을 나타냅니다.
 
 ## 5. undefined
 ```null```과 같이 별도의 자료형에 속합니다.
@@ -167,7 +168,9 @@ let name;
 name
 ```
 
-그 외의 자료형에는 객체(object), 심볼(symbol), BigInt 자료형이 있습니다.
+그 외의 자료형에는 객체(object), 심볼(symbol), BigInt 자료형이 있습니다.     
+
+-------
 
 # typeof 연산자
 변수의 자료형을 알고싶을 때 사용하는 연산자입니다.
