200106 변수와 상수 - 수정2(글자크기 수정)

--- a/기초/변수와상수.md
+++ b/기초/변수와상수.md
@@ -111,13 +111,13 @@ let num = 123;
 ```
 일반적인 숫자와 ```Infinity```, ```-Infinity```, ```NaN```과 같이 '특수 숫자 값'이 들어갈 수도 있습니다.
 
-#### - ```Infinity```
+##### - ```Infinity```
 Infinity는 단어에서 알 수 있듯이 무한대의 숫자를 의미합니다.   
 예를들면, 어떤 숫자든 숫자 0으로 나누면 무한대를 얻을 수 있습니다.
 ``` javascript
 1 / 0
 ```
-#### - ```NaN```
+##### - ```NaN```
 NaN은 계산 중에 에러가 발생 했다는 것을 알려주는 값입니다.
 ``` javascript
 "문자열" / 5
