210108 자료형- 형변환, 상호작용 추가

--- a/기초/자료형.md
+++ b/기초/자료형.md
@@ -89,3 +89,71 @@ alert(`This is number ${10}`;
 alert(`Name? ${"name"}`;
 alert(`Name? ${name}`;
 ```
+
+-----
+
+# 형 변환
+함수와 연산자에 전달되는 값은 대부분 적절한 자료형으로 자동 변환되어 저장이 됩니다.
+``` js
+let age = 15;
+typeof(age);
+```
+이 코드의 결과가 "number"인 것 처럼요.   
+이러한 과정을 '형 변환(type conversion)'이라고 합니다.
+
+이 외에 전달받은 값을 의도적으로 원하는 타입으로 변환(명시적 변환)을 시켜줄 수도 있는데, 그 방법에 대해 알아보도록 하겠습니다.
+
+## 1. 문자형으로 변환
+문자형으로 변환을 하고 싶다면 ```String(value)```함수를 사용하면 됩니다.
+``` js
+let value = 5;
+typeof(value); // Number
+
+value = String(value);
+value // "5"
+typeof(value); // string
+```
+
+## 2. 숫자형으로 변환
+숫자형으로의 변환은 수학과 관련된 함수와 표현식에서 자동으로 일어납니다.
+``` js
+"6"/"2" // 3
+```
+명시적 변환을 위해서는 ```Number()``` 함수를 사용할 수 있습니다.
+``` js
+let str = "135"
+Number(str);
+typeof(str);
+```
+```boolean```값인 ```true```와 ```false```도 형 변환이 가능한데, 형 변환 했을 때 반환되는 값은 각각 ```1```과 ```0```입니다.
+```js
+Number(true); // 1
+Number(false); // 0
+```
+| 전달받은 값       | 형 변환 후    |
+| -------------  |-------------|
+| undefined      | ```NaN```        |
+| null           |   ```0```        |
+| true/false     | ```1 / 0```      |
+| string         | 전달 받은 문자열을 "그대로" 읽으며 처음과 끝의 공백을 무시. 문자열이 비어있다면 0이되고 오류 발생 시 NaN반환 |
+
+이 외의 방법으로는 ```parseInt()```나 ```parseFloat()``` 등의 함수를 사용하여 명시적으로 형변환을 해 줄 수 있으니 참고하시면 됩니다. 이곳에서는 ```int```와 ```float```형 등에 대해서는 배우지 않았다고 가정하므로 설명은 다루지 않겠습니다.
+
+## 3. 불린형으로 변환
+이 형 변환은 보통 논리 연산을 수행할 때 발생합니다.   
+명시적 변환을 위해서는 ```Boolean()```함수를 사용하면 됩니다.
+
+이 때
+- 숫자 ```0```, 빈 문자열, ```null```, ```undefined```, ```NaN```과 같은 값들은 ```false```로 변환이 되고
+- 그 외의 값은 ```true```로 변환이 됩니다.
+    * ❗  문자열 "0"은 ```true```로 취급됩니다.
+
+``` js
+Boolean(1); // true
+Boolean("str"); // true
+Boolean(""); // false
+```
+| 전달받은 값                         | 형 변환 후    |
+| -------------                    |-------------|
+| ```0, null, undefined, NaN, ""```      |   false      |
+| 그 외의 값                         |   true        |
