--- a/기초/기본연산자.md
+++ b/기초/기본연산자.md
@@ -99,11 +99,14 @@ x + y // 35
 # 연산자 우선순위
 하나의 표현식에 둘 이상의 연산자가 있는 경우, 실행 순서는 연산자의 우선순위 _(precedence)_ 에 의해 결정됩니다.
 
-```1 + 2 * 2```라는 식이 있을 때 곱셈이 먼저, 그 후에 덧셈이 일어납니다. 이러한 개념이 연산자 우선순위입니다. 여기서 곱셈은 덧셈보다 더 높은 우선순위를 가지게 되는 것입니다.
+```1 + 2 * 2```라는 식이 있을 때 곱셈이 먼저, 그 후에 덧셈이 일어납니다. 이러한 개념이 연산자 우선순위입니다.   
+여기서 곱셈은 덧셈보다 더 높은 우선순위를 가집니다.
 
-자바스크립트에서 정의한 연산자 우선순위가 마음에 들지 않는다면, 괄호를 사용하면 됩니다. 괄호는 모든 연산자보다 우선순위가 높기 때문에 자바스크립트에서 정의한 연산자 우선순위를 무력화시킵니다. 
+자바스크립트에서 정의한 연산자 우선순위가 마음에 들지 않는다면, 괄호를 사용하면 됩니다.   
+괄호는 모든 연산자보다 우선순위가 높기 때문에 자바스크립트에서 정의한 연산자 우선순위를 무력화시킵니다. 
 
-자바스크립트는 다양한 연산자를 제공하는데, 이 모든 연산자엔 우선순위가 매겨져 있습니다. 우선순위 숫자가 클수록 먼저 실행되고, 순위가 같으면 왼쪽부터 시작해서 오른쪽으로 연산이 수행됩니다.
+자바스크립트는 다양한 연산자를 제공하는데, 이 모든 연산자엔 우선순위가 매겨져 있습니다.   
+우선순위 숫자가 클수록 먼저 실행되고, 순위가 같으면 왼쪽부터 시작해서 오른쪽으로 연산이 수행됩니다.
 
 이러한 연산자들의 우선순위는 [우선순위 테이블 _(operator precedence)_](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Operator_Precedence)을 참고하면 됩니다.
 
