--- a/기초/기본연산자.md
+++ b/기초/기본연산자.md
@@ -131,8 +131,8 @@ n -= 2;
 
 # 증가 감소 연산자
 숫자를 하나 늘리거나 줄이는 것은 자주 사용되는 연산입니다. 이를 위해 이러한 연산을 해 주는 연산자를 제공합니다.
-- 증가 연산자 (++)
-- 감소 연산자 (--)
+- 증가 연산자 (```++```)
+- 감소 연산자 (```--```)
 ``` js
 let n = 5;
 n++;
