연산자-기본연산자 수정

--- a/기초/기본연산자.md
+++ b/기초/기본연산자.md
@@ -160,7 +160,7 @@ let n2 = 5;
 ++n; // 6
 n // 6
 ```
-이 결과를 봤을 때, ```++변수```는 덧셈 계산이 먼저 이루어지고 다음 연산자를 수행하며 ```변수++```는 문이 연산된 후 덧셈 계산이 이루어짐을 볼 수 있습니다.
+이 결과를 봤을 때, ```++변수```는 덧셈 계산이 먼저 이루어지고 다음 연산자를 수행하며 ```변수++```는 문이 연산된 후 덧셈 계산이 이루어짐을 알 수 있습니다.
 
 # 기타 연산자들
 이 외의 연산자들에는 [비트 연산자](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators#bitwise_shift_operators)와 쉼표 연산자가 존재합니다.   
