--- a/기초/함수.md
+++ b/기초/함수.md
@@ -171,3 +171,20 @@ if ( checkAge(age) ) {
 4. 변수 ```x```와 ```n```를 매개변수로 전달 했을 때 x의 n제곱을 반환하는 함수를 선언 해 보세요.   
   n은 1 이상의 자연수이어야 합니다.  
   이외의 경우가 입력되었을 때는 자연수를 입력하라는 얼럿 창을 띄워주어야 합니다.
+
+## 함수 표현식
+자바 스크립트에는 함수 표현식을 사용하여 함수를 만들 수 있습니다.
+``` js
+let sayHi = function() {
+  alert( "Hello" );
+}; // 이는 변수이기 때문에 세미콜론을 필요로 합니다.
+// 이 때 
+sayHi // 입력 시 실행은 되지 않고 코드만 보입니다. 코드를 실행하기 위해서는
+sayHi() // 라고 적어야 합니다.
+```
+https://ko.javascript.info/function-expressions#ref-1436
+ㄴ 여기부터~
+
+이 페이지 초반에는 함수를 사용하는 방법에는 여러가지가 있다고 말했습니다.   
+이 다른 방법에 대해 말씀 해 드리겠습니다.
+ㄴ 아래에 방법 추가
