--- a/기초/함수.md
+++ b/기초/함수.md
@@ -182,9 +182,165 @@ let sayHi = function() {
 sayHi // 입력 시 실행은 되지 않고 코드만 보입니다. 코드를 실행하기 위해서는
 sayHi() // 라고 적어야 합니다.
 ```
-https://ko.javascript.info/function-expressions#ref-1436
-ㄴ 여기부터~
+
+## 콜백 함수
+함수를 값처럼 전달하는 예시, 함수 표현식에 관한 예시를 좀 더 살펴보겠습니다.   
+매개변수가 3개 있는 함수, ```ask(question, yes, no)```를 작성해보겠습니다. 
+
+``` js
+function ask(question, yes, no) {
+  if (confirm(question)) yes() // 확인 눌렀을 때
+  else no(); // 취소 눌렀을 때
+}
+
+function showOk() {
+  alert( "동의하셨습니다." );
+}
+
+function showCancel() {
+  alert( "취소 버튼을 누르셨습니다." );
+}
+
+// 함수 showOk와 showCancel가 ask 함수의 인수로 전달됨
+ask("동의하십니까?", showOk, showCancel);
+```
+
+이 때, ```ask```의 인수 ```showOk```와 ```showCancel```은 __콜백__ 또는 __콜백 함수__라고 불립니다.
+
+이러한 코드는 다음과 같은 방법으로도 선언이 가능합니다.
+``` js
+function ask(question, yes, no) {
+  if (confirm(question)) yes()
+  else no();
+}
+
+ask(
+  "동의하십니까?",
+  function() { alert("동의하셨습니다."); },
+  function() { alert("취소 버튼을 누르셨습니다."); }
+);
+```
+```ask()```내에 존재하는 함수들은 이름 없는 함수로, __익명 함수__ 라고 부릅니다.
+
+## 함수 선언문 vs 함수 표현식
+- 함수 선언문   
+  : 함수는 주요 코드 흐름 중간에 독자적인 구문 형태로 존재합니다.
+  ``` js
+  function sum(a, b) {
+    return a + b;
+  }
+  ```
+- 함수 표현식   
+  : 함수는 표현식이나 구문 구성(syntax construct) 내부에 생성됩니다. 
+  ``` js
+  let sum = function(a, b) {
+    return a + b;
+  };
+  ```
+
+두 번째 차이는 자바스크립트 엔진이 언제 함수를 생성하는지에 있습니다.   
+함수 표현식은 실행 흐름이 함수에 도달했을 때 사용이 가능합니다.   
+하지만 함수 선언문을 사용하면 실행 흐름에 상관없이 어디서든 호출이 가능합니다.
+``` js
+sayHi("John"); // Hello, John
+
+function sayHi(name) {
+  alert( `Hello, ${name}` );
+}
+```
+
+세 번째 차이는 스코프입니다.   
+함수 선언문이 블록 내에 위치하면 블록 밖에서는 사용이 불가합니다.
+``` js
+let age = 16; // 16을 저장했다 가정합시다.
+
+if (age < 18) {
+  welcome();               // \   (실행)
+                           //  |
+  function welcome() {     //  |
+    alert("안녕!");        //  |  함수 선언문은 함수가 선언된 블록 내
+  }                        //  |  어디에서든 유효합니다
+                           //  |
+  welcome();               // /   (실행)
+
+} else {
+
+  function welcome() {
+    alert("안녕하세요!");
+  }
+}
+
+// 여기는 중괄호 밖이기 때문에
+// 중괄호 안에서 선언한 함수 선언문은 호출할 수 없습니다.
+
+welcome(); // Error: welcome is not defined
+```
+if문 밖에서 welcome을 사용하고 싶다면 함수 표현식을 사용하면 됩니다.
+``` js
+let age = prompt("나이를 알려주세요.", 18);
+
+let welcome;
+
+if (age < 18) {
+
+  welcome = function() {
+    alert("안녕!");
+  };
+
+} else {
+
+  welcome = function() {
+    alert("안녕하세요!");
+  };
+
+}
+
+welcome(); // 제대로 동작합니다.
+```
+
+참고로 이러한 코드들은 물음표 연산자를 사용하면 좀 더 단순화하여 표현할 수 있습니다.
+
+``` js
+let age = prompt("나이를 알려주세요.", 18);
+
+let welcome = (age < 18) ?
+  function() { alert("안녕!"); } :
+  function() { alert("안녕하세요!"); };
+
+welcome(); // 제대로 동작합니다.
+```
+
 
 이 페이지 초반에는 함수를 사용하는 방법에는 여러가지가 있다고 말했습니다.   
-이 다른 방법에 대해 말씀 해 드리겠습니다.
-ㄴ 아래에 방법 추가
+이 다른 방법에 대해 말해 드리겠습니다.
+
+## 화살표 함수
+함수를 전언할 때 
+``` js
+let sum = (a, b) => a + b;
+```
+
+보시는 바와 같이 ```(a, b) => a + b```는 인수 a와 b를 받는 함수입니다. ```(a, b) => a + b```는 실행되는 순간 표현식 a + b를 평가하고 그 결과를 반환합니다.
+
+아래 예시와 같이 함수를 동적으로 만들 수 있습니다.
+
+
+``` js
+let age = prompt("나이를 알려주세요.", 18);
+
+let welcome = (age < 18) ?
+  () => alert('안녕') :
+  () => alert("안녕하세요!");
+
+welcome();
+```
+
+본문이 여러개인 화살표 함수는 아래와 같이 사용할 수 있습니다.
+``` js
+let sum = (a, b) => {  // 중괄호는 본문 여러 줄로 구성되어 있음을 알려줍니다.
+  let result = a + b;
+  return result; // 중괄호를 사용했다면, return 지시자로 결괏값을 반환해주어야 합니다.
+};
+
+alert( sum(1, 2) ); // 3
+```
