--- a/브라우저/브라우저_환경과_다양한_명세서.md
+++ b/브라우저/브라우저_환경과_다양한_명세서.md
@@ -10,3 +10,52 @@
 
 출처 - https://ko.javascript.info/browser-environment
 
+최상단에는 ```window```라 불리는 ‘루트’ 객체가 있습니다. ```window``` 객체는 2가지 역할을 합니다.
+
+1. 이는 자바스크립트 코드의 전역 객체입니다.
+2. '브라우저 창(browser window)'을 대변하고, 이를 제어할 수 있는 메서드를 제공합니다.
+아래 예시에선 window 객체를 전역 객체로 사용하고 있습니다.
+
+``` js
+function sayHi() {
+  alert("안녕하세요.");
+}
+
+// 전역 함수는 전역 객체(window)의 메서드임
+window.sayHi();
+```
+
+아래 예시에선 window 객체가 브라우저 창을 대변하고 있으며, 이를 이용해 창의 높이를 출력합니다.
+``` js
+alert(window.innerHeight); // 창 내부(inner window) 높이
+```
+
+## DOM (Document Object Model)
+문서객체모델은 웹 페이지 내의 모든 콘텐츠를 객체로 나타내줍니다. 
+
+다음 사진은 HTML 문서 내 DOM 계층의 예를 나타냅니다.
+![DOM](https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/DOM-model.svg/440px-DOM-model.svg.png)
+
+출처 - https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/DOM-model.svg/440px-DOM-model.svg.png
+
+이곳에서의 '루트'객체는 ```document```가 됩니다.   
+이러한 ```document``` 객체를 이용해 페이지 내 그 무엇이든 변경할 수 있고, 원하는 것을 만들 수도 있습니다.
+
+``` js
+// 배경을 붉은색으로 변경하기
+document.body.style.background = "red";
+
+// 1초 후 원상태로 복구하기
+setTimeout(() => document.body.style.background = "", 1000);
+```
+혹은 ```document```를 사용해서 HTML 페이지에 DOM 객체를 추가 해줄 수도 있습니다.
+
+``` js
+let newDiv = document.createElement('div');
+newDiv.textContent ='Hello!';
+document.body.append(newDiv);
+```
+이와 함께 ```.getElementById(), .getElementsByClassName()``` 등을 사용하면 객체들의 id, class 이름으로 검색을 하여 그 자리에 새로운 객체를 집어넣을 수도, 추가할 수도 있습니다.
+
+DOM 이외에는 BOM이라는 것도 존재합니다.   
+이에 대해 좀 더 알고싶다면 [이곳](https://ko.javascript.info/browser-environment#ref-684)을 참고하세요.
